gcc/testsuite/rust/compile/issue-3625.rs
type A = crate::A;
// { dg-error "failed to resolve type path segment: .A." "" { target *-*-* } .-2 }
